--- a/Task_1/css/style.css
+++ b/Task_1/css/style.css
@@ -294,7 +294,7 @@ section {
   line-height: 2;
 }
 
-.destination .box-container {
+.projects .box-container {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (minmax(27rem, 1fr))[auto-fit];
@@ -302,57 +302,57 @@ section {
   gap: 1.5rem;
 }
 
-.destination .box-container .box {
+.projects .box-container .box {
   border-radius: 1rem;
   overflow: hidden;
   background: #222;
 }
 
-.destination .box-container .box:hover img {
+.projects .box-container .box:hover img {
   -webkit-transform: scale(1.1);
           transform: scale(1.1);
 }
 
-.destination .box-container .box .image {
+.projects .box-container .box .image {
   height: 20rem;
   overflow: hidden;
   width: 100%;
 }
 
-.destination .box-container .box .image img {
+.projects .box-container .box .image img {
   height: 100%;
   width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
 }
 
-.destination .box-container .box .content {
+.projects .box-container .box .content {
   padding: 2rem;
   text-align: center;
 }
 
-.destination .box-container .box .content h3 {
+.projects .box-container .box .content h3 {
   font-size: 2rem;
   color: #fff;
 }
 
-.destination .box-container .box .content p {
+.projects .box-container .box .content p {
   padding: 1rem 0;
   font-size: 1.4rem;
   color: #aaa;
   line-height: 2;
 }
 
-.destination .box-container .box .content a {
+.projects .box-container .box .content a {
   font-size: 1.7rem;
   color: #29d9d5;
 }
 
-.destination .box-container .box .content a:hover i {
+.projects .box-container .box .content a:hover i {
   padding-left: 1rem;
 }
 
-.destination .box-container .box .content a i {
+.projects .box-container .box .content a i {
   padding-right: .5rem;
 }
 
