--- a/Task_3/css/style.css
+++ b/Task_3/css/style.css
@@ -1,166 +1,95 @@
+@import url('https://fonts.googleapis.com/css2?family=Akaya+Kanadaka&display=swap');
 *{
     margin: 0;
     padding: 0;
+    transition: all 0.4s;
+    -webkit-transition: all 0.4s;
+    -moz-transition: all 0.4s;
+    -ms-transition: all 0.4s;
+    -o-transition: all 0.4s;
     box-sizing: border-box;
-    font-family: consolas;
 }
-
 body{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    position: relative;
     min-height: 100vh;
-    background: #edf1f4;
+    background: rgb(246, 246, 246);
 }
-
-.dark{
-    background: #282c2f;
-}
-
-.togglebtn{
-    position: fixed;
-    top: 20px;
-    right: 20px;
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    background: #555;
-    cursor: pointer;
-    border: 2px solid #edf1f4;
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1),
-    -5px -5px 10px #fff;
-}
-
-.dark .togglebtn{
-    background: #edf1f4;
-    border: 2px solid #333;
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25),
-    -5px -5px 10px #fff;
-}
-
-.con{
-    position: relative;
-    width: 480px;
-    padding: 20px;
-    border-radius: 20px;
-    box-shadow: 15px 15px 20px rgba(0, 0, 0, 0.1),
-    -15px -15px 20px #fffb;
-}
-
-.dark .con{
-    background: #33393e;
-    box-shadow: 15px 15px 20px rgba(0, 0, 0, 0.25),
-    -15px -15px 20px rgba(255, 255, 255, 0.1);
-}
-
-.con .button{
-    position: relative;
-    display: grid;
-}
-
-.con .button #value{
-    position: relative;
-    grid-column: span 3;
-    user-select: none;
-    overflow: none;
+img{
     width: 100%;
-    text-align: end;
-    color: #5166d6;
-    height: 100px;
-    line-height: 100px;
-    box-shadow: inset 5px 5px 10px rgba(0, 0, 0, 0.1),
-    inset -5px -5px 20px #fff;
+}
+.wrapper{
+    max-width: 400px;
+    width: 100%;
+    height: auto;
+    margin: 0 auto;
+    padding: 20px;
     border-radius: 10px;
-    margin-bottom: 12px;
-    padding: 0 20px;
-    font-size: 2em;
-    font-weight: 500;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50);
+    -moz-transform: translate(-50);
+    -ms-transform: translate(-50);
+    -o-transform: translate(-50);
+    background: #fff;
 }
-
-.dark .con .button #value{
-    color: #eee;
-    box-shadow: inset 15px 15px 20px rgba(0, 0, 0, 0.25),
-    inset -15px -15px 20px rgba(255, 255, 255, 0.1);
+.wrapper > h1{
+    font-family: 'Akaya Kanadaka', cursive;
+    padding: 10px 0;
+    padding-bottom: 20px;
 }
-
-.con .button span{
-    position: relative;
-    padding: 10px;
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1),
-    -5px -5px 20px #fff;
-    margin: 10px;
-    cursor: pointer;
-    user-select: none;
-    width: auto;
+.image img{
+    border-radius: 10px;
+    margin-bottom: 15px;
+}
+.input_wrapper{
     display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.2em;
-    color: #666;
-    border: 2px solid #edf1f4;
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1),
-    -5px -5px 20px #fff;
-    border-radius: 10px;
+    flex-direction: column;
+    margin-bottom: 15px;
 }
-
-.dark .con .button span{
-    color: #eee;
-    border: 2px solid #333;
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25),
-    -5px -5px 10px rgba(255, 255, 255, 0.1);
+.input_wrapper input{
+    padding: 10px;
+    outline: none;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    margin: 6px 0;
 }
-
-.con .button span:active{
-    box-shadow: inset 5px 5px 10px rgba(0, 0, 0, 0.1),
-    inset -5px -5px 20px #fff;
-    color: #f44336;
+.input_wrapper input:focus{
+    border: 1px solid rgba(0, 0, 0, 0.397);
 }
-
-.dark .con .button span:active{
-    box-shadow: inset 5px 5px 10px rgba(0, 0, 0, 0.25),
-    inset -5px -5px 10px rgba(255, 255, 255, 0.1);   
-}
-
-.con .button .cel{
-    background: #f44336;
+.btn{
+    background: #000;
+    padding: 10px 20px;
+    outline: none;
     color: #fff;
-    border: 2px solid #edf1f4;
+    font-family: 'Akaya Kanadaka', cursive;
+    border: none;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    cursor: pointer;
+    border: 1px solid rgb(0, 0, 0);
 }
-.con .button .fah{
-    background: #6931a9;
-    color: #fff;
-    border: 2px solid #edf1f4;
-}
-.con .button .kel{
-    background: #31a935;
-    color: #fff;
-    border: 2px solid #edf1f4;
-}
-.con .button #equal{
-    background: #2196f3;
-    color: #fff;
-    border: 2px solid #edf1f4;
+.btn:hover{
+    background: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+    cursor: pointer;
 }
 
-.dark .con .button #equal,
-.dark .con .button .cel,
-.dark .con .button .kel,
-.dark .con .button .fah{
-    border: 2px solid #333;
-}
-
-.con .button #equal:active,
-.con .button .cel:active,
-.con .button .kel:active,
-.con .button .fah:active{
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1),
-    -5px -5px 0px #fff,
-    inset 5px 5px 10px rgba(0, 0, 0, 0.1);
-}
-
-.dark .con .button #equal:active,
-.dark .con .button .cel:active,
-.dark .con .button .kel:active,
-.dark .con .button .fah:active{
-    box-shadow: inset 5px 5px 10px rgba(0, 0, 0, 0.1);
+@media (max-width: 400px){
+    .wrapper{
+        width: 96%;
+    }
 }
